feat: add themes

--- a/nix/app/internal/views/components/theme_switcher.templ
+++ b/nix/app/internal/views/components/theme_switcher.templ
@@ -9,7 +9,20 @@ templ ThemeSwitcher() {
             <option value="night">Night</option>
             <option value="dracula">Dracula</option>
             <option value="synthwave">Synthwave</option>
-            <option value="treacherest">Treacherest</option>
+            <option value="cyberpunk">cyberpunk</option>
+            <option value="valentine">valentine</option>
+            <option value="cupcake">cupcake</option>
+            <option value="retro">retro</option>
+            <option value="forest">forest</option>
+            <option value="aqua">aqua</option>
+            <option value="pastel">pastel</option>
+            <option value="acid">acid</option>
+            <option value="caramellatte">caramellatte</option>
+            <option value="abyss">abyss</option>
+            <option value="silk">silk</option>
+            <option value="coffee">coffee</option>
+            <option value="winter">winter</option>
+            <option value="nord">nord</option>
         </select>
     </div>
 }
